--- a/read/Rechnung_Tech.adoc
+++ b/read/Rechnung_Tech.adoc
@@ -1,13 +1,22 @@
-# Local Rust Docs 
+:toc:
+:doctype: book
 
-## Win
+= Rechnung Tech
+
+== Backtrace
+
+RUST_BACKTRACE=1
+
+== Local Rust Docs
+
+===  Win
 
 ~/.rustup/toolchains/stable-x86_64-pc-windows-msvc/share/doc/rust/html/index.html
 
-## Linux
+=== Linux
 
 ~/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/share/doc/rust/html/index.html
 
-# Dependencies Docs
+== Dependencies Docs
 
 cargo doc --open
